# rust-client-server

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
