[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
url = "2.4.0"
